Fix configure.ac, Add sample mounts.xml to mountmanager installation
git-svn-id: svn://svn.freaque.net/enigma2@4 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
-AC_INIT(enigma2-plugins, 1.0)
-AM_INIT_AUTOMAKE(enigma2-plugins, 1.0)
+AC_INIT(enigma2-ritzmo-plugins, 1.0)
+AM_INIT_AUTOMAKE(enigma2-ritzmo-plugins, 1.0)
 
 AM_PATH_PYTHON()
 
@@ -7,6 +7,7 @@ AC_OUTPUT([
 Makefile
 
 mountmanager/Makefile
+mountmanager/etc/Makefile
 mountmanager/src/Makefile
 
 weatherforecast/Makefile
