Add MediaDownloader to plugins, can be used in conjunction with plugin/viewer-framework - Accepts http and https sources so far, can easily be extended
git-svn-id: svn://svn.freaque.net/enigma2@26 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 AUTOMAKE_OPTIONS = gnu
-SUBDIRS = mountmanager weatherforecast werbezapper
+SUBDIRS = mountmanager mediadownloader weatherforecast werbezapper
