--- a/mediadownloader/CONTROL/control
+++ b/mediadownloader/CONTROL/control
@@ -1,10 +1,10 @@
 Package: enigma2-plugin-extensions-mediadownloader
-Version: 0.1-20070917-r0
+Version: 0.2-20070927-r0
 Description: Downloader-Plugin for Enigma2
 Architecture: mipsel
 Section: extra
 Priority: optional
 Maintainer: Moritz Venn <moritz.venn@freaque.net>
 Homepage: http://www.ritzmo.de
-Depends: enigma2(>1.0cvs20070731)
+Depends: enigma2(>1.0cvs20070908), twisted-web
 Source: http://www.ritzmo.de
