AutoTimer: Add BackgroundPolling. Hardcoded to "every 3h" now. Indent with tabs.
git-svn-id: svn://svn.freaque.net/enigma2@135 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/autotimer/CONTROL/control
+++ b/autotimer/CONTROL/control
@@ -1,6 +1,6 @@
 Package: enigma2-plugin-extensions-autotimer
-Version: 0.0.1-20071013-r0
-Description: -
+Version: 0.1-20071013-r0
+Description: Automatically add Timers based on simple rules 
 Architecture: mipsel
 Section: extra
 Priority: optional
