EPGRefresh: Add Configuration, make checks actually work, you better check the diff because I forgot what I changed :D
git-svn-id: svn://svn.freaque.net/enigma2@197 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/epgrefresh/CONTROL/control
+++ b/epgrefresh/CONTROL/control
@@ -1,6 +1,6 @@
 Package: enigma2-plugin-extensions-epgrefresh
-Version: 0.0.1-20071012-r0
-Description: Plugin to refresh EPG Data in Background for enigma2
+Version: 0.0.5-20071020-r0
+Description: Plugin to refresh EPG Data when Reciever is inactive
 Architecture: mipsel
 Section: extra
 Priority: optional
