enigma2-plugins: add a simple TicTacToe-Plugin.... to be optimized ;)
git-svn-id: svn://svn.freaque.net/enigma2@206 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,9 @@ mountmanager/src/Makefile
 mediadownloader/Makefile
 mediadownloader/src/Makefile
 
+tictactoe/Makefile
+tictactoe/src/Makefile
+
 weatherforecast/Makefile
 weatherforecast/src/Makefile
 
