--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 AUTOMAKE_OPTIONS = gnu
-SUBDIRS = autotimer epgrefresh mountmanager mediadownloader weatherforecast werbezapper
+SUBDIRS = autotimer epgrefresh mountmanager mediadownloader tictactoe weatherforecast werbezapper
