AutoTimer: fix typo HistoryBrowser: added, still a little buggy but it's a start ;-)
git-svn-id: svn://svn.freaque.net/enigma2@236 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,9 @@ autotimer/src/Makefile
 epgrefresh/Makefile
 epgrefresh/src/Makefile
 
+historybrowser/Makefile
+historybrowser/src/Makefile
+
 mountmanager/Makefile
 mountmanager/etc/Makefile
 mountmanager/src/Makefile
