--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 AUTOMAKE_OPTIONS = gnu
-SUBDIRS = autotimer epgrefresh historybrowser mountmanager mediadownloader tictactoe weatherforecast werbezapper
+SUBDIRS = historybrowser mountmanager mediadownloader tictactoe weatherforecast
