engima2-plugins: remove mediadownloader since I moved to "official" enigma2-plugins cvs
git-svn-id: svn://svn.freaque.net/enigma2@669 a295cab0-163a-0410-857a-8207b47ee9d6

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 AUTOMAKE_OPTIONS = gnu
-SUBDIRS = historybrowser mountmanager mediadownloader tictactoe weatherforecast
+SUBDIRS = historybrowser mountmanager tictactoe weatherforecast
