--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,9 @@ AM_PATH_PYTHON()
 AC_OUTPUT([
 Makefile
 
+emission/Makefile
+emission/src/Makefile
+
 historybrowser/Makefile
 historybrowser/src/Makefile
 
